--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -2,11 +2,28 @@ app.title=Подсчет калорий
 app.home=Главная
 app.footer=Приложение стажировки <a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a>
 app.login=Зайти как
+
+common.select=Выбрать
+common.save=Сохранить
+common.Cancel=Отмена
+common.add=Добавить
+common.edit=Изменить
+common.delete=Удалить
+
 user.title=Пользователи
 user.name=Имя
 user.email=Почта
 user.roles=Роли
 user.active=Активный
 user.registered=Зарегистрирован
+
 meal.title=Моя еда
-common.select=Выбрать
+meal.dateTime=Дата/время
+meal.Description=Описание
+meal.Calories=Калории
+
+filter.fromDate=От даты (включительно)
+filter.toDate=До даты (включительно)
+filter.fromTime=Нач. время (включительно)
+filter.toTime=Кон. время (исключая)
+filter.submit=Применить
