--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -21,6 +21,8 @@ meal.title=Моя еда
 meal.dateTime=Дата/время
 meal.Description=Описание
 meal.Calories=Калории
+meal.title_update=Обновить еду
+meal.title_create=Создать еду
 
 filter.fromDate=От даты (включительно)
 filter.toDate=До даты (включительно)
