--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -1,31 +1,29 @@
-app.title=??????? ???????
-app.home=???????
-app.footer=?????????? ?????????? <a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a>
-app.login=????? ???
+app.title=Подсчет калорий
+app.home=Главная
+app.footer=Приложение стажировки <a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a>
+app.login=Зайти как
 
-common.select=???????
-common.save=?????????
-common.Cancel=??????
-common.add=????????
-common.edit=????????
-common.delete=???????
+user.title=Пользователи
+user.name=Имя
+user.email=Почта
+user.roles=Роли
+user.active=Активный
+user.registered=Зарегистрирован
 
-user.title=????????????
-user.name=???
-user.email=?????
-user.roles=????
-user.active=????????
-user.registered=???????????????
+meal.title=Моя еда
+meal.edit=Редактирование еды
+meal.add=Добавление еды
+meal.filter=Отфильтровать
+meal.startDate=От даты (включая)
+meal.endDate=До даты (включая)
+meal.startTime=От времени (включая)
+meal.endTime=До времени (исключая)
+meal.description=Описание
+meal.dateTime=Дата/Время
+meal.calories=Калории
 
-meal.title=??? ???
-meal.dateTime=????/?????
-meal.Description=????????
-meal.Calories=???????
-meal.title_update=???????? ???
-meal.title_create=??????? ???
-
-filter.fromDate=?? ???? (????????????)
-filter.toDate=?? ???? (????????????)
-filter.fromTime=???. ????? (????????????)
-filter.toTime=???. ????? (????????)
-filter.submit=?????????
+common.select=Выбрать
+common.delete=Удалить
+common.update=Обновить
+common.save=Сохранить
+common.cancel=Отменить
