--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -42,4 +42,4 @@ common.confirm=Вы уверены?
 common.save=Сохранить
 common.cancel=Отменить
 exception.user.duplicateEmail=Пользователь с таким email уже существует
-exception.user.duplicateDateTime=Еда с такой датой/временем уже существует
+exception.meal.duplicateDateTime=Еда с такой датой/временем уже существует
