--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -9,6 +9,7 @@ app.login=Зайти как
 app.profile=профиль
 app.register=Регистрация
 app.registered=Вы зарегистрированы. Введите ваш логин/пароль.
+
 user.title=Пользователи
 user.edit=Редактировать пользователя
 user.add=Добавить пользователя
@@ -19,6 +20,10 @@ user.active=Активный
 user.registered=Зарегистрирован
 user.password=Пароль
 user.caloriesPerDay=Норма калорий в день
+userTo.name=Имя
+userTo.email=Почта
+userTo.password=Пароль
+userTo.caloriesPerDay=Норма калорий в день
 meal.title=Моя еда
 meal.edit=Редактировать еду
 meal.add=Добавить еду
@@ -36,10 +41,20 @@ common.deleted=Запись удалена
 common.saved=Запись сохранена
 common.enabled=Запись активирована
 common.disabled=Запись деактивирована
-common.errorStatus=Статус ошибки
-common.appError=Ошибка приложения
 common.confirm=Вы уверены?
 common.save=Сохранить
 common.cancel=Отменить
+common.search=Искать
 exception.user.duplicateEmail=Пользователь с такой почтой уже есть в приложении
 exception.meal.duplicateDateTime=У вас уже есть еда с такой датой/временем
+error.appError=Ошибка приложения
+error.dataNotFound=Данные не найдены
+error.dataError=Ошибка в данных
+error.validationError=Ошибка проверки данных
+NotEmpty=[{0}] не должно быть пустым
+NotBlank=[{0}] не должно быть пустым
+NotNull=[{0}] не должно быть пустым
+Email=Неверный формат [{0}]
+Range=[{0}] должно быть между {2} и {1}
+Length=Длинна [{0}] должна быть между {2} и {1}
+Size=Размер [{0}] должен быть между {2} и {1}
